hamberger expansion is in progress

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -192,6 +192,14 @@ a:visited {
   text-align: center;
 }
 
+.showhide em {
+  width: 20px;
+  height: 3px;
+  margin: 3.5px 20px 0;
+  float: right;
+  background: #333;
+}
+
 .menuzord .showhide {
   width: 60px;
   height: 32px;
@@ -209,6 +217,8 @@ a:visited {
   list-style: none;
   float: right;
   line-height: 1.6;
+  display: block;
+  max-height: 400px;
 }
 
 .menuzord.red li.menu-item-172 {
@@ -259,9 +269,156 @@ a:visited {
   display: none;
 }
 
-.menu-item-172:hover .dropdown-open {
+.header-menu-item:hover .dropdown-open {
   display: block;
 }
+
+.menuzord-menu ul.dropdown li {
+  clear: both;
+  width: 100%;
+  border: 0;
+  font-size: 14px;
+  position: relative;
+}
+
+.menuzord-menu ul.dropdown li a {
+  width: 100%;
+  background: 0 0;
+  padding: 7px 15px 7px 15px;
+  color: #78100d;
+  text-decoration: none;
+  display: inline-block;
+  float: left;
+  clear: both;
+  position: relative;
+  outline: 0;
+  -o-transition: padding .2s linear;
+  -moz-transition: padding .2s linear;
+  -webkit-transition: padding .2s linear;
+  transition: padding .2s linear;
+  border-bottom: 1px solid #fbf9f0;
+  border-right: 1px solid #fbf9f0;
+  border-left: 1px solid #fbf9f0;
+}
+
+.menuzord.red .menuzord-menu ul.dropdown li:hover>a {
+  color: #fff;
+  background: #78100d;
+  border-color: #8b1d1a;
+  color: #faf5e1;
+  text-align: left;
+}
+
+.menuzord-menu ul.dropdown li:hover>a {
+  padding-left: 28px;
+  padding-right: 18px;
+}
+
+input[type="text"], input[type="email"], input[type="url"], input[type="password"], input[type="search"], input[type="number"], input[type="tel"], input[type="range"], input[type="date"], input[type="month"], input[type="week"], input[type="time"], input[type="datetime"], input[type="datetime-local"], input[type="color"], textarea {
+  height: auto;
+  margin: 0;
+  font-size: 12px;
+  line-height: 18px;
+  box-shadow: 0px 0px 0px rgba(10, 10, 10, 0.1) inset !important;
+  padding: 7px 10px;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  border-radius: 0px;
+}
+
+input[type="text"] {
+  color: #666;
+  border: 1px solid #ccc;
+  border-radius: 2px;
+  padding: 5px 10px;
+}
+
+.srchcls {
+  float: left;
+  width: 200px;
+  font-size: 12px !important;
+  line-height: 20px !important;
+  background: #f6f5f5;
+  border: 1px solid #eee !important;
+  border-right: 0 !important;
+  padding: 5px 10px !important;
+  -webkit-border-top-left-radius: 2px;
+  -webkit-border-bottom-left-radius: 2px;
+  -moz-border-radius-topleft: 2px;
+  -moz-border-radius-bottomleft: 2px;
+  border-top-left-radius: 2px;
+  border-bottom-left-radius: 2px;
+}
+
+blockquote, dd, div, dl, dt, form, h1, h2, h3, h4, h5, h6, li, ol, p, pre, td, th, ul {
+  margin: 0;
+  padding: 0;
+}
+
+/* ------------------------------------------- media starts 960 --------------------------------------- */
+@media (max-width: 960px) {
+  .menuzord-responsive.menuzord {
+    padding: 0;
+  }
+
+  .menuzord-responsive .showhide {
+      margin: 0;
+  }
+
+  .menuzord-responsive .menuzord-menu.scrollable {
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .menuzord-responsive .menuzord-menu {
+    width: 100%;
+    float: left!important;
+  }
+
+  .menuzord-responsive .menuzord-menu>li {
+    width: 100%;
+    display: block;
+    position: relative;
+  }
+
+  .menuzord .showhide {
+    display: block;
+  }
+
+  .jss_menu {
+    padding: 0;
+    background: #eee url(//jssateb.ac.in/wp-content/themes/jssate2016/images/menu.png) no-repeat left top;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;
+    padding-top: 10px;
+    position: relative;
+  }
+
+  .menuzord-menu {
+    float: left;
+    text-align: left;
+    display: none;
+  }
+
+}
+
+/* ------------------------------------------- media starts 640 --------------------------------------- */
+@media screen and (max-width: 640px) {
+#custom-search-form {
+    width: auto;
+    float: none;
+    margin: 0 auto;
+}
+
+
+
+
+
+
+
+}
+
 
 
 
