--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-banner-carousel></app-banner-carousel>
+<app-success-info-banner></app-success-info-banner>
 <!-- <main>
   <router-outlet></router-outlet>
 </main> -->
