--- a/src/app/banner-carousel/banner-carousel.component.html
+++ b/src/app/banner-carousel/banner-carousel.component.html
@@ -1,20 +1,20 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="../../images/bg0.jpg" alt="First slide">
+      <img class="d-block w-100" src="../../assets/images/bg.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="../../images/bg11.jpg" alt="Second slide">
+      <img class="d-block w-100" src="../../assets/images/bg2.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="../../images/bg12.jpg" alt="Third slide">
+      <img class="d-block w-100" src="../../assets/images/bg3.jpg" alt="Third slide">
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="next">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="prev">
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
