--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -265,12 +265,12 @@ a:visited {
   text-align: left;
 }
 
-.dropdown-open {
-  display: none;
-}
-
 .header-menu-item:hover .dropdown-open {
   display: block;
+}
+
+.dropdown-open {
+  display: none;
 }
 
 .menuzord-menu ul.dropdown li {
@@ -279,26 +279,6 @@ a:visited {
   border: 0;
   font-size: 14px;
   position: relative;
-}
-
-.menuzord-menu ul.dropdown li a {
-  width: 100%;
-  background: 0 0;
-  padding: 7px 15px 7px 15px;
-  color: #78100d;
-  text-decoration: none;
-  display: inline-block;
-  float: left;
-  clear: both;
-  position: relative;
-  outline: 0;
-  -o-transition: padding .2s linear;
-  -moz-transition: padding .2s linear;
-  -webkit-transition: padding .2s linear;
-  transition: padding .2s linear;
-  border-bottom: 1px solid #fbf9f0;
-  border-right: 1px solid #fbf9f0;
-  border-left: 1px solid #fbf9f0;
 }
 
 .menuzord.red .menuzord-menu ul.dropdown li:hover>a {
@@ -355,8 +335,43 @@ blockquote, dd, div, dl, dt, form, h1, h2, h3, h4, h5, h6, li, ol, p, pre, td, t
   padding: 0;
 }
 
+.menuzord-menu li .indicator {
+  margin-left: 10px;
+}
+
 /* ------------------------------------------- media starts 960 --------------------------------------- */
 @media (max-width: 960px) {
+  .menuzord-responsive .menuzord-menu>li:first-child>a {
+    border-top: solid 1px #dddddd;
+  }
+
+  .menuzord-responsive .menuzord-menu>li>a {
+    width: 100%;
+    padding: 10px 20px 10px 20px;
+    display: block;
+    border-bottom: solid 1px #dddddd;
+  }
+
+  .menuzord-responsive .menuzord-menu li .indicator {
+    width: 60px;
+    height: 42px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 12px;
+    text-align: center;
+    line-height: 44px;
+    border-left: solid 1px #dddddd;
+  }
+
+  .menuzord-responsive .menuzord-menu.menuzord-indented>li>ul.dropdown>li>a {
+    padding-left: 40px!important;
+  }
+
+  .menuzord-responsive .menuzord-menu ul.dropdown li a {
+    border-bottom: solid 1px #dddddd;
+  }
+
   .menuzord-responsive.menuzord {
     padding: 0;
   }
@@ -387,7 +402,7 @@ blockquote, dd, div, dl, dt, form, h1, h2, h3, h4, h5, h6, li, ol, p, pre, td, t
 
   .jss_menu {
     padding: 0;
-    background: #eee url(//jssateb.ac.in/wp-content/themes/jssate2016/images/menu.png) no-repeat left top;
+    background: #eee url('../../assets/images/menu.png') no-repeat left top;
     -webkit-border-radius: 0px;
     -moz-border-radius: 0px;
     border-radius: 0px;
@@ -401,22 +416,59 @@ blockquote, dd, div, dl, dt, form, h1, h2, h3, h4, h5, h6, li, ol, p, pre, td, t
     display: none;
   }
 
+  .menuzord-responsive .menuzord-menu ul.dropdown li {
+    position: relative;
+  }
+
 }
 
 /* ------------------------------------------- media starts 640 --------------------------------------- */
 @media screen and (max-width: 640px) {
+  .menuzord-menu {
+    float: left;
+    text-align: left;
+  }
+
 #custom-search-form {
     width: auto;
     float: none;
     margin: 0 auto;
 }
 
+.indicator {
+  visibility: visible;
+  display: block;
+}
+
+.menuzord-menu>li>a {
+  font-size: 14px;
+  border: 0;
+  line-height: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 
 
+}
 
-
-
-
+.menuzord-menu ul.dropdown li a {
+  width: 100%;
+  background: 0 0;
+  padding: 7px 15px 7px 15px;
+  color: #78100d;
+  text-decoration: none;
+  display: inline-block;
+  float: left;
+  clear: both;
+  position: relative;
+  outline: 0;
+  -o-transition: padding .2s linear;
+  -moz-transition: padding .2s linear;
+  -webkit-transition: padding .2s linear;
+  transition: padding .2s linear;
+  border-bottom: 1px solid #fbf9f0;
+  border-right: 1px solid #fbf9f0;
+  border-left: 1px solid #fbf9f0;
 }
 
 
