carousel issue in progress-part1- header hover issue

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -315,7 +315,7 @@ input[type="text"] {
 
 .srchcls {
   float: left;
-  width: 200px;
+  width: 18rem;
   font-size: 12px !important;
   line-height: 20px !important;
   background: #f6f5f5;
