--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <app-header></app-header>
 <app-banner-carousel></app-banner-carousel>
 <app-success-info-banner></app-success-info-banner>
+<app-home-body></app-home-body>
 <!-- <main>
   <router-outlet></router-outlet>
 </main> -->
 
-{{ title }}
+
 <div>
   <i class="fa fa-thermometer-three-quarters fa-5x" aria-hidden="true"> </i>
 </div>
