--- a/src/app/home-body/home-body.component.html
+++ b/src/app/home-body/home-body.component.html
@@ -16,10 +16,11 @@
         <div class="grid1">
           <i class="fa fa-book" aria-hidden="true"></i>
           <h4>Professional Study</h4>
-          <p>Under this we provide - Professional level of study to
+          <p>We provide - Professional level of study to
             achieve the deep understanding of subject matter.</p>
         </div>
       </div>
+
       <div class="col-md-4 col-lg-4 col-xl-4">
         <div class="grid1">
           <i class="fa fa-tasks" aria-hidden="true"></i>
