--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,20 @@
 <app-header></app-header>
 <app-banner-carousel></app-banner-carousel>
 <app-success-info-banner></app-success-info-banner>
-<app-home-body></app-home-body>
+
+  <app-home-body></app-home-body>
+
 <!-- <main>
   <router-outlet></router-outlet>
 </main> -->
 
 
-<div>
+<!-- <div>
   <i class="fa fa-thermometer-three-quarters fa-5x" aria-hidden="true"> </i>
 </div>
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
+ -->
 
 <app-footer></app-footer>
 <app-back-to-top></app-back-to-top>
-
