--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,12 @@
 <app-banner-carousel></app-banner-carousel>
 <app-success-info-banner></app-success-info-banner>
 
+
   <app-home-body></app-home-body>
+
+  <app-info-with-image></app-info-with-image>
+
+  <app-mackbook-image-info></app-mackbook-image-info>
 
 <!-- <main>
   <router-outlet></router-outlet>
@@ -15,6 +20,6 @@
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
  -->
-
+<app-testimonial></app-testimonial>
 <app-footer></app-footer>
 <app-back-to-top></app-back-to-top>
