--- a/src/app/home-body/home-body.component.html
+++ b/src/app/home-body/home-body.component.html
@@ -1,3 +1,84 @@
+<!-- card on home page -->
+<div class="demo">
+        <div class="container">
+            <h3 class="h3">News slider Demo - 2 </h3>
+            <div class="row">
+                <div class="col-md-12">
+                    <div id="news-slider2" class="owl-carousel owl-theme">
+                        <div class="owl-wrapper-outer">
+                          <div class="owl-wrapper">
+                          <div class="owl-item">
+                            <div class="post-slide2">
+                            <div class="post-img">
+                                <a href="#"><img src="http://bestjquery.com/tutorial/news-slider/demo33/images/img-1.jpg" alt=""></a>
+                            </div>
+                            <div class="post-content">
+                                <h3 class="post-title"><a href="#">Latest News Post</a></h3>
+                                <p class="post-description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec elementum mauris. Praesent vehicula gravida dolor, ac efficitur sem sagittis.
+                                </p>
+                                <ul class="post-bar">
+                                    <li><i class="fa fa-calendar"></i> June 5, 2016</li>
+                                    <li>
+                                        <i class="fa fa-folder"></i>
+                                        <a href="#">Mockup</a>
+                                        <a href="#">Graphics</a>
+                                        <a href="#">Flayers</a>
+                                    </li>
+                                </ul>
+                                <a href="#" class="read-more">read more</a>
+                            </div>
+                        </div></div>
+                        <div class="owl-item" style="width: 370px;"><div class="post-slide2">
+                            <div class="post-img">
+                                <a href="#"><img src="http://bestjquery.com/tutorial/news-slider/demo33/images/img-2.jpg" alt=""></a>
+                            </div>
+                            <div class="post-content">
+                                <h3 class="post-title"><a href="#">Latest News Post</a></h3>
+                                <p class="post-description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec elementum mauris. Praesent vehicula gravida dolor, ac efficitur sem sagittis.
+                                </p>
+                                <ul class="post-bar">
+                                    <li><i class="fa fa-calendar"></i> June 7, 2016</li>
+                                    <li>
+                                        <i class="fa fa-folder"></i>
+                                        <a href="#">Mockup</a>
+                                        <a href="#">Graphics</a>
+                                        <a href="#">Flayers</a>
+                                    </li>
+                                </ul>
+                                <a href="#" class="read-more">read more</a>
+                            </div>
+                        </div></div>
+                        <div class="owl-item" style="width: 370px;"><div class="post-slide2">
+                            <div class="post-img">
+                                <a href="#"><img src="http://bestjquery.com/tutorial/news-slider/demo33/images/img-3.jpg" alt=""></a>
+                            </div>
+                            <div class="post-content">
+                                <h3 class="post-title"><a href="#">Latest News Post</a></h3>
+                                <p class="post-description">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nec elementum mauris. Praesent vehicula gravida dolor, ac efficitur sem sagittis.
+                                </p>
+                                <ul class="post-bar">
+                                    <li><i class="fa fa-calendar"></i> June 5, 2016</li>
+                                    <li>
+                                        <i class="fa fa-folder"></i>
+                                        <a href="#">Mockup</a>
+                                        <a href="#">Graphics</a>
+                                        <a href="#">Flayers</a>
+                                    </li>
+                                </ul>
+                                <a href="#" class="read-more">read more</a>
+                            </div>
+                        </div></div>
+                        </div></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- end card on home page  -->
+
 <div class="services">
   <h3 class="heading-agileinfo">
     Our Building Blocks<span>Nothing great was ever achieved without enthusiasm</span>
@@ -20,7 +101,6 @@
             achieve the deep understanding of subject matter.</p>
         </div>
       </div>
-
       <div class="col-md-4 col-lg-4 col-xl-4">
         <div class="grid1">
           <i class="fa fa-tasks" aria-hidden="true"></i>
