--- a/src/app/home-body/home-body.component.html
+++ b/src/app/home-body/home-body.component.html
@@ -10,7 +10,7 @@
                           <div class="owl-item">
                             <div class="post-slide2">
                             <div class="post-img">
-                                <a href="#"><img src="http://bestjquery.com/tutorial/news-slider/demo33/images/img-1.jpg" alt=""></a>
+                                <a href="#"><img src="../../assets/images/student-group/card/11.jpg" alt=""></a>
                             </div>
                             <div class="post-content">
                                 <h3 class="post-title"><a href="#">Latest News Post</a></h3>
@@ -31,7 +31,7 @@
                         </div></div>
                         <div class="owl-item" style="width: 370px;"><div class="post-slide2">
                             <div class="post-img">
-                                <a href="#"><img src="http://bestjquery.com/tutorial/news-slider/demo33/images/img-2.jpg" alt=""></a>
+                                <a href="#"><img src="../../assets/images/student-group/card/22.jpg" alt=""></a>
                             </div>
                             <div class="post-content">
                                 <h3 class="post-title"><a href="#">Latest News Post</a></h3>
@@ -52,7 +52,7 @@
                         </div></div>
                         <div class="owl-item" style="width: 370px;"><div class="post-slide2">
                             <div class="post-img">
-                                <a href="#"><img src="http://bestjquery.com/tutorial/news-slider/demo33/images/img-3.jpg" alt=""></a>
+                                <a href="#"><img src="../../assets/images/student-group/card/33.jpg" alt=""></a>
                             </div>
                             <div class="post-content">
                                 <h3 class="post-title"><a href="#">Latest News Post</a></h3>
