--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,49 +1,3 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <h1><a class="navbar-brand" href="#">ERDK.Classes</a></h1>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <span class="spacer"></span>
-    <ul class="navbar-nav ">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Services</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Gallery</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          Others
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
-    </ul>
-    <form id="custom-search-form" class="form-search form-horizontal">
-      <div class="input-append span12">
-        <input type="text" class="search-query" placeholder="Search">
-        <button type="submit" class="btn"><i class="fa fa-search" aria-hidden="true"> </i></button>
-      </div>
-    </form>
-  </div>
-</nav> -->
-
 <section class="topbar">
   <div class="row topbar-row">
     <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -87,64 +41,64 @@
                 href="javascript:void(0)">About<span class="indicator" (click)="submenuExpandFunction('About')"><i class="fa fa-angle-down"></i></span></a>
               <ul class="dropdown dropdown-open">
                 <li id="menu-item-140" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-140"><a
-                    href="http://jssateb.ac.in/organization/">Organization</a></li>
+                    href="#">Organization</a></li>
                 <li id="menu-item-55" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-55"><a
-                    href="http://jssateb.ac.in/about-jssate/">About JSSATE</a></li>
+                    href="#">About JSSATE</a></li>
                 <li id="menu-item-142" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-142"><a
-                    href="http://jssateb.ac.in/board-of-governors/">Board Of Governors</a></li>
+                    href="#">Board Of Governors</a></li>
                 <li id="menu-item-574" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-574"><a
-                    href="http://jssateb.ac.in/principals-desk/">Principal’s Desk</a></li>
+                    href="#">Principal’s Desk</a></li>
                 <li id="menu-item-573" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-573"><a
-                    href="http://jssateb.ac.in/dean-academics/">Dean Academics</a></li>
+                    href="#">Dean Academics</a></li>
                 <li id="menu-item-572" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-572"><a
-                    href="http://jssateb.ac.in/dean-research/">Dean Research</a></li>
+                    href="#">Dean Research</a></li>
                 <li id="menu-item-571" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-571"><a
-                    href="http://jssateb.ac.in/dean-student-welfare/">Dean Student Welfare</a></li>
+                    href="#">Dean Student Welfare</a></li>
                 <li id="menu-item-3699" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3699"><a
-                    href="http://jssateb.ac.in/administrative-staff/">Administrative Staff</a></li>
+                    href="#">Administrative Staff</a></li>
                 <li id="menu-item-144" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-144"><a
-                    href="http://jssateb.ac.in/centre-of-excellence/">Centre of Excellence</a></li>
+                    href="#">Centre of Excellence</a></li>
               </ul>
             </li>
-            <li id="menu-item-54" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-54"><a href="http://jssateb.ac.in/admission/">Admission</a></li>
+            <li id="menu-item-54" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-54"><a href="#">Admission</a></li>
             <li id="menu-item-265" class="header-menu-item menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-265"><a
                 href="javascript:void(0)">Academics<span class="indicator" (click)="submenuExpandFunction('Academics')"><i class="fa fa-angle-down"></i></span></a>
               <ul class="dropdown dropdown-open">
                 <li id="menu-item-245" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-245"><a
-                    href="http://jssateb.ac.in/academics/under-graduate/">Under Graduate</a></li>
+                    href="#">Under Graduate</a></li>
                 <li id="menu-item-260" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-260"><a
-                    href="http://jssateb.ac.in/academics/post-graduate/">Post Graduate</a></li>
+                    href="#">Post Graduate</a></li>
                 <li id="menu-item-261" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-261"><a
-                    href="http://jssateb.ac.in/academics/management-studies/">Management Studies</a></li>
+                    href="#">Management Studies</a></li>
               </ul>
             </li>
-            <li id="menu-item-52" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-52"><a href="http://jssateb.ac.in/research/">Research</a></li>
+            <li id="menu-item-52" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-52"><a href="#">Research</a></li>
             <li id="menu-item-59" class="header-menu-item menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-59"><a
                 href="javascript:void(0)">Campus Life<span class="indicator" (click)="submenuExpandFunction('Campus Life')"><i class="fa fa-angle-down"></i></span></a>
               <ul class="dropdown dropdown-open">
                 <li id="menu-item-1399" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1399"><a
-                    href="http://jssateb.ac.in/campus-life/facilities/">Facilities</a></li>
+                    href="#">Facilities</a></li>
                 <li id="menu-item-1893" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1893"><a
-                    href="http://jssateb.ac.in/campus-life/hostel-facility/">Hostel</a></li>
+                    href="#">Hostel</a></li>
                 <li id="menu-item-1901" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1901"><a
-                    href="http://jssateb.ac.in/campus-life/events/">Events</a></li>
+                    href="#">Events</a></li>
                 <li id="menu-item-155" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-155"><a
-                    href="http://jssateb.ac.in/campus-life/sports/">Sports</a></li>
+                    href="#">Sports</a></li>
                 <li id="menu-item-153" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-153"><a
-                    href="http://jssateb.ac.in/campus-life/clubs/">Clubs</a></li>
+                    href="#">Clubs</a></li>
                 <li id="menu-item-158" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-158"><a
-                    href="http://jssateb.ac.in/campus-life/entrepreneur-development-centre/">Entrepreneur Development
+                    href="#">Entrepreneur Development
                     Centre</a></li>
                 <li id="menu-item-159" class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-159"><a
-                    href="http://jssateb.ac.in/category/gallery/">Gallery</a></li>
+                    href="#">Gallery</a></li>
                 <li id="menu-item-2360" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2360"><a
-                    href="http://jssateb.ac.in/campus-life/green-campus/">Green Campus</a></li>
+                    href="#">Green Campus</a></li>
               </ul>
             </li>
             <li id="menu-item-3065" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-3065"><a
-                href="http://jssateb.ac.in/step/">STEP</a></li>
+                href="#">STEP</a></li>
             <li id="menu-item-4250" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-4250"><a
-                href="http://jssateb.ac.in/Onlinefee/JSS.html">Online Fee</a></li>
+                href="#">Online Fee</a></li>
             <li class="scrollable-fix"></li>
           </ul>
         </div>
