--- a/src/app/info-with-image/info-with-image.component.html
+++ b/src/app/info-with-image/info-with-image.component.html
@@ -50,7 +50,7 @@
       </a>
       <a href="#">
         <div class="info_btn">
-        <h4 class="btn_txt1">Notifications</h4>
+        <h4 class="btn_txt1">Notification</h4>
         <p class="btn_txt2">Session Start & Others</p>
         </div>
       </a>
