--- a/src/app/mackbook-image-info/mackbook-image-info.component.css
+++ b/src/app/mackbook-image-info/mackbook-image-info.component.css
@@ -1,7 +1,3 @@
-
-
-
-
 .panel-heading:hover {
   cursor:pointer;
 }
@@ -34,7 +30,7 @@
   }
   .panel-title {
       font-weight: 400;
-      color: $white;
+      color: white;
   }
 
 /*----------------------------------
@@ -49,23 +45,33 @@ width: 55.3125em;
 height: 31.875em;
 font-size: 13px;
 margin: 0 auto;
+}
 
 @media (max-width:1199px){
-  font-size: 11px;
+  .md-macbook-pro {
+    font-size: 11px;
+  }
 }
+
 @media (max-width:1024px){
-  font-size: 10px;
+  .md-macbook-pro {
+    font-size: 10px;
+  }
 }
 
 @media (max-width:767px){
-  font-size: 7px;
+  .md-macbook-pro {
+    font-size: 7px;
+  }
 }
 
 @media (max-width:320px){
-  font-size: 5px;
+  .md-macbook-pro {
+    font-size: 5px;
+  }
 }
 
-}
+
 .md-macbook-pro .md-lid {
 width: 45em;
 height: 30.625em;
@@ -103,7 +109,7 @@ height: 26.375em;
 margin: 0 auto;
 position: relative;
 top: 2.0625em;
-// background: #1d1d1d;
+/* background: #1d1d1d; */
 background: #fff;
 overflow: hidden;
 }
